zellij-server/src/tab/unit/snapshots/zellij_server__tab__layout_applier_tests__reapply_layout_with_fewer_positions.snap
---
source: zellij-server/src/tab/./unit/layout_applier_tests.rs
expression: "take_pane_state_snapshot(&tiled_panes, &floating_panes, &focus_pane_id,\n&viewport, &display_area,)"
---
VIEWPORT: x=0, y=0, cols=100, rows=50
DISPLAY: cols=100, rows=50
FOCUS: None

TILED PANES (4)
  Terminal(1):
    geom: x=0, y=0, cols=50, rows=25
    logical_position: 0
    run: None
    selectable: true
    title: Pane #1
    borderless: false

  Terminal(2):
    geom: x=0, y=25, cols=50, rows=25
    logical_position: 1
    run: None
    selectable: true
    title: Pane #2
    borderless: false

  Terminal(3):
    geom: x=50, y=0, cols=50, rows=25
    run: None
    selectable: true
    title: Pane #3
    borderless: false

  Terminal(4):
    geom: x=50, y=25, cols=50, rows=25
    run: None
    selectable: true
    title: Pane #4
    borderless: false
